views-dataset-analysis.less - fix font-size for btn-toolbar: used to be 0, should be @font-size-base so that bootstrap-ui dropdowns are visible

--- a/web/src/main/javascript/edu/dfci/cccb/mev/web/ui/app/views/dataset/analysis/views-dataset-analysis.less
+++ b/web/src/main/javascript/edu/dfci/cccb/mev/web/ui/app/views/dataset/analysis/views-dataset-analysis.less
@@ -30,7 +30,7 @@
 			}
 			
 			.btn-toolbar{
-				font-size: 0;	
+				font-size: @font-size-base;
 				.btn{
 					.btn-sm();					
 					padding: 8px 9px;
@@ -86,7 +86,7 @@
 			.btn-toolbar{
 				.pull-right();				
 				.btn-group{
-					font-size: 0;
+					font-size: @font-size-base;
 					.btn{
 						.btn-sm();
 						.btn-analysis-action-menu();
